# payhawk-importacion

./: README.md  pyproject.toml  reglas.ejemplo.yaml
notebook/: IMPORTACION_Payhawk.ipynb  Plantilla_Importia_FacturasRecibidas_CORREGIDA.json  README.md  pyproject.toml  reglas.ejemplo.yaml  requirements.txt
notebook/notebook/: IMPORTACION_Payhawk.ipynb
notebook/src/payhawk_revision/: engine.py
notebook/tests/: test_unidades.py
src/payhawk_revision/: __init__.py  engine.py  reglas.py
tests/: conftest.py  test_pipeline.py  test_reglas.py  test_unidades.py
