[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "payhawk-revision"
version = "1.1.0"
description = "Revisión y preparación de gastos de Payhawk para importación en A3/Importia"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Doofinder" }]
dependencies = [
    "pandas>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "openpyxl>=3.1,<4.0",
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
